<?xml version="1.0"?>
<package format="3">
  <name>ros2_proximity_monitor</name>
  <version>0.1.0</version>
  <description>Simple ROS 2 proximity monitor: publisher simulates distance, processor evaluates state.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
